--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>¡Estás invitado!</h1>
             <p>Me encantaría que seas parte de este momento tan especial para mí. ¡Falta poco!</p>
             <a 
-            href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=XV+de+Pia&details=La+celebración+será+en+Florentino+Ameghino+867,+Quincho+Petrolero.&location=Florentino+Ameghino+867&dates=20241215T200000Z/20241216T020000Z" 
+            href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=XV+de+Pia&details=La+celebración+será+en+Florentino+Ameghino+867,+Quincho+Petrolero.&location=Florentino+Ameghino+867&dates=20241215T000000Z/20241215T080000Z" 
             target="_blank" 
             class="button"
         >Agendar Recordatorio</a>
@@ -49,6 +49,9 @@
                 <img src="salud.gif" alt="Icono de celebración">
                  <h2>CELEBRACIÓN</h2>
                 <p>La celebración será en Florentino Ameghino 867, Quincho Petrolero</p>
+                <div class="fecha">
+                  <img src="14 DIC (1).png" alt="fecha">
+                </div>
 <a href="https://bit.ly/49epmlW" target="_blank">
     <button class="btn-location">VER UBICACIÓN</button>
   </a>  
